Backport fix for MDEV-7673, MDEV-7203 and MDEV-7192 from 10.0-galera